Wire challenge catalog into runtime, migrate settings to typed config
Replace direct challenges.yml FileConfiguration access with an immutable
ChallengeCatalog parsed at bootstrap. Move challenge settings (enabled,
reset-on-create, economy, broadcast) into RuntimeConfig and config.yml
(v124 migration). Add permission-based requirements for challenges and
ranks. Make Rank a proper value object. Remove legacy challengeSharing
toggle (island sharing is now always on).

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>